remove tomcat & cargo